src/snapshots/crafting_interpreters__scanner__scanner-11.snap
---
source: src/scanner.rs
expression: "scan_tokens(\"and class class_ else false for fun\")"
---
Ok(
    [
        Token {
            type_: And,
            lexeme: "and",
            line: 1,
        },
        Token {
            type_: Class,
            lexeme: "class",
            line: 1,
        },
        Token {
            type_: Identifier,
            lexeme: "class_",
            line: 1,
        },
        Token {
            type_: Else,
            lexeme: "else",
            line: 1,
        },
        Token {
            type_: False,
            lexeme: "false",
            line: 1,
        },
        Token {
            type_: For,
            lexeme: "for",
            line: 1,
        },
        Token {
            type_: Fun,
            lexeme: "fun",
            line: 1,
        },
        Token {
            type_: EOF,
            lexeme: "",
            line: 1,
        },
    ],
)
