src/snapshots/crafting_interpreters__scanner__scanner-12.snap
---
source: src/scanner.rs
expression: "scan_tokens(\"if if_ nil null or print return super\")"
---
Ok(
    [
        Token {
            type_: If,
            lexeme: "if",
            literal: Nil,
            line: 1,
        },
        Token {
            type_: Identifier,
            lexeme: "if_",
            literal: Nil,
            line: 1,
        },
        Token {
            type_: Nil,
            lexeme: "nil",
            literal: Nil,
            line: 1,
        },
        Token {
            type_: Identifier,
            lexeme: "null",
            literal: Nil,
            line: 1,
        },
        Token {
            type_: Or,
            lexeme: "or",
            literal: Nil,
            line: 1,
        },
        Token {
            type_: Print,
            lexeme: "print",
            literal: Nil,
            line: 1,
        },
        Token {
            type_: Return,
            lexeme: "return",
            literal: Nil,
            line: 1,
        },
        Token {
            type_: Super,
            lexeme: "super",
            literal: Nil,
            line: 1,
        },
        Token {
            type_: EOF,
            lexeme: "",
            literal: Nil,
            line: 1,
        },
    ],
)
