src/snapshots/crafting_interpreters__scanner__scanner-2.snap
---
source: src/scanner.rs
expression: "scan_tokens(\"\")"
---
Ok(
    [
        Token {
            type_: EOF,
            lexeme: "",
            literal: Nil,
            line: 1,
        },
    ],
)
