src/snapshots/crafting_interpreters__scanner__scanner-3.snap
---
source: src/scanner.rs
expression: "scan_tokens(\"\\n\\n\")"
---
Ok(
    [
        Token {
            type_: EOF,
            lexeme: "",
            literal: Nil,
            line: 3,
        },
    ],
)
