src/snapshots/crafting_interpreters__scanner__scanner-4.snap
---
source: src/scanner.rs
expression: "scan_tokens(\"// asdf\")"
---
Ok(
    [
        Token {
            type_: EOF,
            lexeme: "",
            literal: Nil,
            line: 1,
        },
    ],
)
