src/snapshots/crafting_interpreters__scanner__scanner-5.snap
---
source: src/scanner.rs
expression: "scan_tokens(\"// asdf\\n\")"
---
Ok(
    [
        Token {
            type_: EOF,
            lexeme: "",
            line: 2,
        },
    ],
)
