src/snapshots/crafting_interpreters__scanner__scanner-7.snap
---
source: src/scanner.rs
expression: "scan_tokens(\"= == < <= > >= => =<\")"
---
Ok(
    [
        Token {
            type_: Equal,
            lexeme: "=",
            line: 1,
        },
        Token {
            type_: EqualEqual,
            lexeme: "==",
            line: 1,
        },
        Token {
            type_: Less,
            lexeme: "<",
            line: 1,
        },
        Token {
            type_: LessEqual,
            lexeme: "<=",
            line: 1,
        },
        Token {
            type_: Greater,
            lexeme: ">",
            line: 1,
        },
        Token {
            type_: GreaterEqual,
            lexeme: ">=",
            line: 1,
        },
        Token {
            type_: Equal,
            lexeme: "=",
            line: 1,
        },
        Token {
            type_: Greater,
            lexeme: ">",
            line: 1,
        },
        Token {
            type_: Equal,
            lexeme: "=",
            line: 1,
        },
        Token {
            type_: Less,
            lexeme: "<",
            line: 1,
        },
        Token {
            type_: EOF,
            lexeme: "",
            line: 1,
        },
    ],
)
