src/snapshots/crafting_interpreters__scanner__scanner-8.snap
---
source: src/scanner.rs
expression: "scan_tokens(\"1/1.1/1.23/123.45\")"
---
Ok(
    [
        Token {
            type_: Number,
            lexeme: "1",
            line: 1,
        },
        Token {
            type_: Slash,
            lexeme: "/",
            line: 1,
        },
        Token {
            type_: Number,
            lexeme: "1.1",
            line: 1,
        },
        Token {
            type_: Slash,
            lexeme: "/",
            line: 1,
        },
        Token {
            type_: Number,
            lexeme: "1.23",
            line: 1,
        },
        Token {
            type_: Slash,
            lexeme: "/",
            line: 1,
        },
        Token {
            type_: Number,
            lexeme: "123.45",
            line: 1,
        },
        Token {
            type_: EOF,
            lexeme: "",
            line: 1,
        },
    ],
)
