src/snapshots/crafting_interpreters__scanner__scanner.snap
---
source: src/scanner.rs
expression: "scan_tokens(\"(){},.-+;* // (symbols)\")"
---
Ok(
    [
        Token {
            type_: LeftParen,
            lexeme: "(",
            line: 1,
        },
        Token {
            type_: RightParen,
            lexeme: ")",
            line: 1,
        },
        Token {
            type_: LeftBrace,
            lexeme: "{",
            line: 1,
        },
        Token {
            type_: RightBrace,
            lexeme: "}",
            line: 1,
        },
        Token {
            type_: Comma,
            lexeme: ",",
            line: 1,
        },
        Token {
            type_: Dot,
            lexeme: ".",
            line: 1,
        },
        Token {
            type_: Minus,
            lexeme: "-",
            line: 1,
        },
        Token {
            type_: Plus,
            lexeme: "+",
            line: 1,
        },
        Token {
            type_: Semicolon,
            lexeme: ";",
            line: 1,
        },
        Token {
            type_: Star,
            lexeme: "*",
            line: 1,
        },
        Token {
            type_: EOF,
            lexeme: "",
            line: 1,
        },
    ],
)
